--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.57.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "main": "public/electron.js",
