--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
     "firebase": "^9.9.3",
+    "install": "^0.13.0",
     "node-sass": "^7.0.1",
+    "npm": "^9.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "sass": "^1.57.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
