--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "musicfy",
   "version": "0.1.0",
   "private": true,
+  "author": "diegoIpaez",
+  "main": "public/electron.js",
+  "homepage": "./",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "electron": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\""
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -23,13 +33,14 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
-  "main": "public/electron.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\""
+  "devDependencies": {
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@testing-library/dom": "^7.21.4",
+    "concurrently": "^7.3.0",
+    "electron": "^20.0.3",
+    "electron-builder": "^23.3.3",
+    "wait-on": "^6.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -48,11 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^7.3.0",
-    "electron": "^20.0.3",
-    "electron-builder": "^23.3.3",
-    "wait-on": "^6.0.1"
   }
 }
