--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musicfy",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "author": "diegoIpaez",
   "main": "public/electron.js",
@@ -10,7 +10,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "yarn build"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -42,6 +44,16 @@
     "electron": "^20.0.3",
     "electron-builder": "^23.3.3",
     "wait-on": "^6.0.1"
+  },
+  "build": {
+    "appId": "com.diegoipaez.musicfy",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
