--- a/package.json
+++ b/package.json
@@ -1,30 +1,59 @@
 {
   "name": "musicfy",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "diegoIpaez",
+  "main": "public/electron.js",
+  "homepage": "./",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "electron": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "yarn build"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
     "firebase": "^9.9.3",
-    "node-sass": "^7.0.1",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-player": "^2.11.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
+    "sass": "^1.57.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
+    "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
-  "main": "public/electron.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\""
+  "devDependencies": {
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@testing-library/dom": "^7.21.4",
+    "concurrently": "^7.3.0",
+    "electron": "^20.0.3",
+    "electron-builder": "^23.3.3",
+    "wait-on": "^6.0.1"
+  },
+  "build": {
+    "appId": "com.diegoipaez.musicfy",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -43,11 +72,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^7.3.0",
-    "electron": "^20.0.3",
-    "electron-builder": "^23.3.3",
-    "wait-on": "^6.0.1"
   }
 }
